fix z-index issue

--- a/components/Header/styles.styl
+++ b/components/Header/styles.styl
@@ -54,6 +54,7 @@ $bodyPadding = 1.5rem
       
     &:hover
       background: $conjureColorMainSlightlyDifferent
+      z-index: $layer1
       
       .links
         background: $conjureColorMainSlightlyDifferent
